# SUAS_24-25

./: Dockerfile  README.md
computer_vision/: YOLO_tester.py  automated_yolo.py  ros_simulator  ros_simulator.cpp  take_video.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: package.sh  package.xml
install/px4_ros_com/share/px4_ros_com/cmake/: export_frame_transformsExport.cmake
log/: latest_build
scripts/: setup_container.sh
simulation/: CMakeLists.txt  package.xml
simulation/config/: config.yaml
simulation/include/simulation/: bike_simulation.hpp
simulation/launch/: launch.py
simulation/rviz/: rviz_config.rviz
simulation/src/: bike_simulation.cpp
simulation/world/: empty.world
simulation/xacro/: bike_description.xacro  bike_training_wheels.xacro
software_ws/: .gitignore  README.md  way_points.txt  waypoints.world
software_ws/src/install/: local_setup.sh  setup.sh
software_ws/src/log/: latest_build
software_ws/src/my_package/: package.xml
software_ws/src/px4_ros_com/: CMakeLists.txt
software_ws/src/takeoff/: CMakeLists.txt
software_ws/src/tutorial_package/: package.xml
software_ws/src/waypoint_generation/: way_point_generation.py  way_points.txt  waypoints.world
software_ws/src/waypoint_generation/templates/: target_model_conflict.mustache  waypoint_template.mustache  world_template.mustache
(+4 files in other folders)
